--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,6 @@ authors = ["Martin Pernica"]
 clap = "~2.19.0"
 log = "^0.3.8"
 simplelog = "^0.4.2"
+serde = "1.0.9"
+serde_derive = "1.0.9"
+serde_json = "1.0.2"
